# AG

./: .gitignore
.claude/: CLAUDE.md
agent_core/: README.md  pyproject.toml
agent_core/examples/custom_agent/: config.yaml  main.py  tools.py
agent_core/examples/math_agent/: .env.example  config.yaml  main.py
agent_core/src/agent_core/: __init__.py  a2a_utils.py  agent_factory.py  common_tools.py  config_loader.py
autogen_a2a_kit/: .env.example  .gitignore  AI_HANDOFF.md  DOCS_INDEX.md  README.md  __init__.py  a2a_client.py  a2a_tool_generator.py  agents.py  example.py  requirements.txt  run_all.ps1  run_ui.py  setup.bat  setup.sh  start_a2a.bat  start_all_agents.bat  start_studio_temp.py  stop_all.ps1
autogen_a2a_kit/AG-cli/: README.md  test_output.txt  test_request.json
autogen_a2a_kit/AG-cli/agents/: __init__.py  base_collaborative.py
autogen_a2a_kit/AG-cli/backend/: main.py
autogen_a2a_kit/AG-cli/db/: hello.py  schema.sql  users_schema.sql
autogen_a2a_kit/AG-mcp/: README.md  setup_venv.bat  start_mcp.bat  start_mcp.ps1
autogen_a2a_kit/AG_Cohub/: CLI_AGENT_GUIDE.md  README.md  cohub_gallery.json  cohub_gallery_builder.py  cohub_loader.py  index.json
autogen_a2a_kit/AG_action/: README.md  __init__.py  tmpclaude-e43c-cwd
autogen_a2a_kit/a2a_demo/: README.md  start_server.bat
autogen_a2a_kit/docs/: UPSTREAM_SYNC.md
autogen_a2a_kit/patches/: README.md  a2a_module.diff  agentflow.diff  gallery_builder.diff  team_runtime.diff  teammanager.diff
templates/: QUICK_START.md  a2a_integration_template.py  a2a_minimal.py
(+95 files in other folders)
