[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-core"
version = "0.1.0"
description = "Reusable agent core library for A2A and AutoGen projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]

dependencies = [
    "google-adk",
    "uvicorn",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]
